Reflects Jai's review comments